# ChangeLog for sys-apps/dbus
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.60 2005/11/08 10:45:24 sbriesen Exp $

  08 Nov 2005; Stefan Briesenick <sbriesen@gentoo.org> files/dbus:
  fixed init-script.

*dbus-0.50-r1 (08 Nov 2005)

  08 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org> files/dbus,
  +dbus-0.50-r1.ebuild:
  Changing the initscript (with revbump).  Minor cosmetic changes (changed to
  doinit).

  07 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> dbus-0.50.ebuild:
  Don't enable dnotify for every system, but just when using Linux kernel, as
  it's a Linux feature.

  07 Nov 2005; Steev Klimaszewski <steev@gentoo.org> dbus-0.36.2.ebuild,
  dbus-0.50.ebuild:
  Change the path for the system socket back into /var/run/dbus/
  This fixeds Bug #96451.  Thanks to joem for pointing it out, as 
  well as kwant <qbit.interia.pl> for filing the bug.

*dbus-0.50 (07 Nov 2005)

  07 Nov 2005; Steev Klimaszewski <steev@gentoo.org>
  +files/dbus-dnotify_configure-01.diff,
  +files/dbus-dnotify_watchdirs-01.diff, +dbus-0.50.ebuild:
  Version bump.  Add patches to fix dnotify support.

  05 Nov 2005; Stephen P. Becker <geoman@gentoo.org> dbus-0.36.2.ebuild:
  added ~mips keyword

  01 Nov 2005; Doug Goldstein <cardoe@gentoo.org> dbus-0.36.2.ebuild:
  make dbus depend on gtk+ 2.6 while they claim gtk+ 2.0, they use 2.6 API
  calls. fixes bug #111118

  19 Oct 2005; Stephen P. Becker <geoman@gentoo.org> dbus-0.23.4-r1.ebuild:
  added ~mips keyword

  15 Sep 2005; <dang@gentoo.org> dbus-0.23.4-r1.ebuild:
  Make hal not pass /bin/false as a shell to ecommit. Bug #103421

*dbus-0.36.2 (10 Sep 2005)

  10 Sep 2005; Doug Goldstein <cardoe@gentoo.org> -dbus-0.36.1.ebuild,
  +dbus-0.36.2.ebuild:
  Rev Bump for security reasons

  26 Aug 2005; Doug Goldstein <cardoe@gentoo.org> dbus-0.36.1.ebuild:
  Fixing bug #103421

*dbus-0.36.1 (25 Aug 2005)
