@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/dbus-0.50-r1.ebuild,v 1.1 2005/11/08 04:46:00 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/dbus-0.50-r1.ebuild,v 1.2 2005/11/24 21:37:30 cryos Exp $
 
-inherit eutils mono python multilib autotools debug
+inherit eutils mono python multilib autotools debug qt3
 
 IUSE="X gtk qt python mono doc xml2"
 
@@ -26,7 +26,7 @@ RDEPEND=">=dev-libs/glib-2.6
 	gtk? ( >=x11-libs/gtk+-2 )
 	python? ( >=dev-lang/python-2.4
 		>=dev-python/pyrex-0.9.3-r2 )
-	qt? ( =x11-libs/qt-3* )
+	qt? ( $(qt_min_version 3.3) )
 	mono? ( >=dev-lang/mono-0.95 )"
 
 
@@ -69,11 +69,16 @@ src_compile() {
 		myconf="${myconf} --disable-mono-docs"
 	fi
 
+	if use qt; then
+		myconf="${myconf} --enable-qt=${QTDIR} QT_MOC=${QTDIR}/bin/moc"
+	else
+		myconf="${myconf} --disable-qt"
+	fi
+
 	# NOTE: I have disabled the xml docs because they are rather pointless
 	econf \
 		`use_with X x` \
 		`use_enable gtk` \
-		`use_enable qt` \
 		`use_enable python` \
 		`use_enable mono` \
 		`use_enable kernel_linux dnotify` \
